@startuml Library System
entity "BookCopy" {
    copy_number
    ISBN
    shelf_location
}

entity "Book" {
    ISBN
    publication_year
    title
    author
    page_count
}

entity "Publisher" {
    name
    address
}

entity "Category" {
    name
}

entity "Reader" {
    reader_id
    last_name
    first_name
    address
    birth_date
}

entity "Record" {
    reader_id
    copy_id
    ISBN
    return_date
}

Book ||--o{ BookCopy: "has"
Book }o--|| Publisher: "published by"
Book }o--o{ Category: "belongs to"
Category |o--o{ Category : "is subcategory of"
Reader ||--o{ Record : "borrows"
BookCopy ||--o{ Record : "is borrowed in"
@enduml